Ajustes finales y cambios pequeños en el area del desarrollo de la app

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
    
-    <title>Trabajo Integral Grafos</title>
+    <title>Trabajo Integral Grafos | Grupo 1</title>
 </head>
 
 <body>
@@ -86,6 +86,16 @@
                         <img src="img/grafo.png" alt="" class="" height="500px" align-image="center">
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="nosotros">
+        <div class="container">
+            <div class="text pt-5 pb-1">
+                <h1>Integrantes</h1>
+                <h2>Marco Rodr&iacuteguez Leal</h2>
+                <h2>Pablo Z&uacuteñiga Naranjo</h2>
             </div>
         </div>
     </section>
