--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top p-3 aria-label">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top p-3" aria-labelledby="nav-area">
         <div class="container">
             <a class="navbar-brand" href="index.html" style="color: rgb(17, 133, 201)">Grafos y Lenguajes Formales</a>
             <button class="navbar-toggler border-white" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-expand="false" aria-label="Toggle navigation">
@@ -167,7 +167,7 @@
     </section>
     
     <footer>
-        <nav class="container-fluid p-2 aria-label">
+        <nav class="container-fluid p-2" aria-labelledby="footer-area">
             <div class="container">
                 <div class="content-center">
                     <div class="row my-1">
@@ -187,7 +187,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule="" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.js"></script>
     <script src="https://kit.fontawesome.com/c8152ea011.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <script src="javascript/aplicacion.js"></script>
